--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  camera: ^0.10.0+1
+  path_provider: 
+  path:
+    
 
 
   # The following adds the Cupertino Icons font to your application.
