--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,13 +33,13 @@ dependencies:
   camera: ^0.10.0+1
   path_provider: 
   path:
-  tflite: ^1.0.4
     
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  tflite_v2: ^1.0.0
 
 dev_dependencies:
   flutter_test:
