--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   camera: ^0.10.0+1
   path_provider: 
   path:
+  
     
 
 
@@ -40,6 +41,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   tflite_v2: ^1.0.0
+  tflite_flutter: ^0.11.0
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +59,10 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  assets:
+    - assets/best_float32.tflite
+    - assets/labels.txt
+
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
