--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   camera: ^0.10.0+1
+  
   path_provider: 
   path:
   
@@ -43,6 +44,8 @@ dependencies:
   tflite_v2: ^1.0.0
   tflite_flutter: ^0.11.0
   image: ^4.3.0
+  flutter_tts: ^4.2.0
+
 
 dev_dependencies:
   flutter_test:
